[gd_scene load_steps=13 format=3 uid="uid://cc46sll2x4x5h"]

[ext_resource type="Texture2D" uid="uid://cg44ws7alg0ya" path="res://Assets/PNG/Stall/bg_wood.png" id="1_ig7tw"]
[ext_resource type="Texture2D" uid="uid://cwvel1dp367yi" path="res://Assets/PNG/Stall/curtain.png" id="1_lquwl"]
[ext_resource type="Script" uid="uid://gkllee53d8gf" path="res://main.gd" id="1_ycdy4"]
[ext_resource type="Texture2D" uid="uid://bh36wrvrjew6o" path="res://Assets/PNG/Stall/curtain_rope.png" id="2_7mycd"]
[ext_resource type="Texture2D" uid="uid://cdtlmwrw371ep" path="res://Assets/PNG/Stall/curtain_straight.png" id="3_272bh"]
[ext_resource type="PackedScene" uid="uid://it4glx3thati" path="res://wave_manager.tscn" id="3_dg77c"]
[ext_resource type="Texture2D" uid="uid://bvx1fgyymb505" path="res://Assets/PNG/Stall/curtain_top.png" id="5_5vw27"]
[ext_resource type="PackedScene" uid="uid://b8y8ugia3ch8c" path="res://shooter.tscn" id="7_272bh"]
[ext_resource type="Texture2D" uid="uid://pv48qs4qy05a" path="res://Assets/PNG/HUD/icon_target.png" id="9_dg77c"]
[ext_resource type="PackedScene" uid="uid://b7kaox1uoee2m" path="res://ammo_display.tscn" id="10_dg77c"]
[ext_resource type="Script" uid="uid://bddwilr0s1mkx" path="res://number_display.gd" id="12_w48qg"]
[ext_resource type="PackedScene" uid="uid://bhwbar473k2tk" path="res://text_display.tscn" id="14_w48qg"]

[node name="Main" type="Node2D"]
script = ExtResource("1_ycdy4")
round_length = 60
metadata/_edit_lock_ = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Background" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(800, 450)
metadata/_edit_lock_ = true

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/Background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 800.0
offset_bottom = 450.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ig7tw")
stretch_mode = 1
metadata/_edit_lock_ = true

[node name="WaveManager" parent="ParallaxBackground" instance=ExtResource("3_dg77c")]
position = Vector2(841, 241)
wave_interval = 5
terrain_y_offset = -100.0
target_distance = 1000.0
target_speed = 100.0
target_angle = 49.714
target_amplitude = 50.0
target_wavelength = 3.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Curtains" type="Node2D" parent="CanvasLayer"]
metadata/_edit_lock_ = true

[node name="CurtainTop" type="TextureRect" parent="CanvasLayer/Curtains"]
offset_top = 42.0
offset_right = 757.0
offset_bottom = 105.0
texture = ExtResource("5_5vw27")
stretch_mode = 1

[node name="CurtainLeft" type="Sprite2D" parent="CanvasLayer/Curtains"]
position = Vector2(66, 214)
texture = ExtResource("1_lquwl")

[node name="CurtainRight" type="Sprite2D" parent="CanvasLayer/Curtains"]
position = Vector2(692, 213)
texture = ExtResource("1_lquwl")
flip_h = true

[node name="CurtainRopeRight" type="Sprite2D" parent="CanvasLayer/Curtains"]
position = Vector2(748, 214)
texture = ExtResource("2_7mycd")

[node name="CurtainRopeLeft" type="Sprite2D" parent="CanvasLayer/Curtains"]
position = Vector2(14, 215)
texture = ExtResource("2_7mycd")

[node name="CurtainStraight" type="TextureRect" parent="CanvasLayer/Curtains"]
offset_right = 758.0
offset_bottom = 80.0
texture = ExtResource("3_272bh")
stretch_mode = 1

[node name="ScoreDisplay" type="HBoxContainer" parent="CanvasLayer"]
offset_right = 32.0
offset_bottom = 37.0
script = ExtResource("12_w48qg")
icon_image = ExtResource("9_dg77c")
metadata/_custom_type_script = "uid://bddwilr0s1mkx"
metadata/_edit_lock_ = true

[node name="AmmoDisplay" parent="CanvasLayer" instance=ExtResource("10_dg77c")]
max_ammo = 5
metadata/_edit_lock_ = true

[node name="TimeDisplay" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2
script = ExtResource("12_w48qg")
metadata/_custom_type_script = "uid://bddwilr0s1mkx"
metadata/_edit_lock_ = true

[node name="Shooter" parent="CanvasLayer" instance=ExtResource("7_272bh")]
metadata/_edit_lock_ = true

[node name="TextDisplay" parent="CanvasLayer" instance=ExtResource("14_w48qg")]
metadata/_edit_lock_ = true

[node name="LittleHand" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="LittleHand" to="." method="_on_little_hand_timeout"]
